[workspace]
members = [
    "openmls",
    "benchmarks",
    "traits",
    "openmls_rust_crypto",
    "libcrux_crypto",
    "memory_storage",
    "emulated_client",
    "openmls_test",
    "delivery-service/ds",
    "delivery-service/ds-lib",
    "basic_credential",
    "mls_profiling"
]
resolver = "2"

# Central dependency management for some crates
[workspace.dependencies]
tls_codec = { version = "0.4.1", features = [
    "derive",
    "serde",
    "mls",
]}

[profile.bench]
debug = "line-tables-only"

[profile.release]
debug = true