[package]
name = "emulated_client"
version = "0.1.0"
authors = ["David Soler"]
edition = "2021"

[dependencies]
url = "2.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
base64 = "0.13"
log = "0.4"
pretty_env_logger = "0.4"
tls_codec = { workspace = true }

jemallocator = "0.5.4"
openmls = { path = "../openmls", features = ["test-utils"] }
ds-lib = { path = "../delivery-service/ds-lib" }
openmls_traits = { path = "../traits" }
openmls_rust_crypto = { path = "../openmls_rust_crypto" }
openmls_memory_storage = { path = "../memory_storage", features = ["persistence"] }
openmls_basic_credential = { path = "../basic_credential" }
mls_profiling = { path = "../mls_profiling" }
serde = { version = "^1.0"}
thiserror = "1.0"
serde_json = "1.0"
rand_chacha = { version = "0.3.1" }
tokio = { version = "1.43.0" , features = ["rt-multi-thread"]}
rand = "0.8.5"
rumqttc = "0.24.0"
time = "0.3.37"
futures = "0.3.29"
clap = "4.4.8"
config = "0.14.0"
chrono = "0.4.31"
libp2p = { version = "0.55.0", features = [ "tokio", "gossipsub", "mdns", "identify", "quic", "dns", "rendezvous", "noise", "macros", "tcp", "yamux", "kad", "request-response"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
async-io = "2.3.3"
oneshot = "0.1.8"
async-std = "1.12.0"
cpu-time = "1.0.0"

[dependencies.termion]
version = "1.5"
git = "https://gitlab.redox-os.org/Jezza/termion.git"
branch = "windows-support"
